--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   max-width: 600px;
-  margin: 60px auto;
+  margin: 60px auto 20px;
   background-color: #162552;
   padding: 30px;
   color: white;
@@ -43,7 +43,7 @@ h2 {
   border-bottom: 1px dashed white;
 }
 
-.city:last-child {
+.city:last-of-type {
   border: none;
 }
 
@@ -62,6 +62,10 @@ strong {
 
 a {
   color: white;
+}
+
+footer a {
+  color: #162552;
 }
 
 small {
